Made a navbar. image refuses to go next to text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         img
         {
             width: 50%;
+
         }
+        
         h1{
             color:maroon;
         }
@@ -22,19 +24,25 @@
         }
 
     </style>
-    <title></title>Document</title>
+    <title>Douglas Adams</title>
 </head>
 <body>
+    <nav>
+        <a href="#elete">Élete</a>
+        <a href="#idezetek">Idézetek</a>
+        <a href="#fogalmak">Fogalmak</a>
+        <a href="#vasarlas">Vásárlás</a>
+    </nav>
     <h1>Douglas Adams</h1>
-    <h2>Élete</h2>
+    <h2 id="elete">Élete</h2>
 
 <p><strong>Douglas Noel Adams</strong> (Cambridge, Anglia, 1952. március 11. - Santa Barbara, Kalifornia, 2001. május 11.) angol író.</p>
 
-<p>Legismertebb műve a Galaxis útikalauz stopposoknak, mely 1978-ban indult útjára, mint a BBC rádiós komédiája, majd később egy öt könyvből álló „trilógiává” nőtte ki magát, mely több mint 15 millió példányban kelt el az író életében, ezt követte egy televíziós sorozat, rengeteg színpadi mű, képregények, egy számítógépes játék, és 2005-ben egy játékfilm ugyanezen a címen. Adams hozzájárulását a brit rádiózáshoz az angol Radio Academy azzal jutalmazta, hogy beválasztotta hírességeinek csarnokába.
+<p>Legismertebb műve a Galaxis útikalauz stopposoknak, mely 1978-ban indult útjára, mint a BBC rádiós komédiája, majd később egy öt könyvből álló „trilógiává” nőtte ki magát, mely több mint 15 millió példányban kelt el az író életében, ezt követte egy televíziós sorozat, rengeteg színpadi mű, képregények, egy számítógépes játék, és 2005-ben egy játékfilm ugyanezen a címen. Adams hozzájárulását a brit rádiózáshoz az angol Radio Academy azzal jutalmazta, hogy beválasztotta hírességeinek csarnokába.</p>
+    
+    <p style="text-align:center"><img src="Douglas_adams_portrait_cropped.jpg" alt="Douglas Adams képe"></p>
 
-<p style="text-align: center;"><img src="Douglas_adams_portrait_cropped.jpg"></p>
-
-<h2>Idézetek</h2>
+<h2 id="idezetek">Idézetek</h2>
 
 <ol>
     <li>Galaxis útikalauz stopposoknak
@@ -57,7 +65,7 @@
         </ul>
     </li>
 </ol>  
-<h2>Fogalmak</h2>
+<h2 id="fogalmak">Fogalmak</h2>
 
 <dl>
     <dt>Bábel-hal</dt><dd>A Bábel-hal egy kicsi, sárga és piócaalkatú, s valószínűleg a legfurcsább lény a világegyetemben. Agyhullám-energián él, mégpedig nem a hordozójáén, hanem azokon, amelyek kívülről érik a hordozóját. A beérkező agyhullám-energiák összes tudat alatti mentális frekvenciáját abszorbeálja, és testébe építi. Majd exkrementumként a hordozója agyába üríti azt a telepatikus mátrixot, amely a tudatos mentális frekvenciák és a hordozó elme beszédközpontja idegi jelzéseinek kombinálásából adódik. Mindez gyakorlatilag azt jelenti, hogy aki Bábel-halat dug a fülébe, az azonnal megért bárkit bármilyen nyelven. A ténylegesen hallott beszédelemek dekódolják azt az agyhullámmátrixot, amelyet a Bábel-hal táplál a hordozója agyába.”</dd>
@@ -65,7 +73,7 @@
     <dt>Föld</dt><dd>Jobbára ártalmatlan.</dd>
 </dl>
 
-<h2><u>Vásárlás</u></h2>
+<h2 id="vasarlas"><u>Vásárlás</u></h2>
 <p><a src="https://www.libri.hu/konyv/douglas_adams.galaxis-utikalauz-stopposoknak-21.html" target="_blank">Magyar nyelven</p>
 <p><a src="https://www.waterstones.com/book/the-hitchhikers-guide-to-the-galaxy/douglas-adams/9781529034523" target="_blank">Angol nyelven</a></p>
 
